--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,12 @@
     "@vicons/fa": "^0.12.0",
     "firebase": "^9.17.1",
     "naive-ui": "^2.34.3",
+    "qrcode.vue": "^3.3.3",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-screen-size": "^2.0.4"
   },
   "devDependencies": {
     "@vicons/ionicons5": "^0.12.0",
