--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,14 @@
     "@vicons/fa": "^0.12.0",
     "firebase": "^9.17.1",
     "lodash": "^4.17.21",
+    "motion": "^10.15.5",
     "naive-ui": "^2.34.3",
+    "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "qrcode.vue": "^3.3.3",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue-screen-size": "^2.0.4"
