--- a/web/package.json
+++ b/web/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "fn": "firebase deploy --only functions",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vicons/fa": "^0.12.0",
     "firebase": "^9.17.1",
     "lodash": "^4.17.21",
     "motion": "^10.15.5",
@@ -24,6 +24,7 @@
     "vue-screen-size": "^2.0.4"
   },
   "devDependencies": {
+    "@vicons/fa": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.0.0"
