--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "firebase": "^9.17.1",
     "lodash": "^4.17.21",
     "motion": "^10.15.5",
