--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.2.1",
+    "color-hash": "^2.0.2",
     "firebase": "^9.17.1",
     "lodash": "^4.17.21",
     "motion": "^10.15.5",
